chore: update react snippets

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -22,6 +22,12 @@
       },
       {
         "language": [
+          "typescript"
+        ],
+        "path": "./javascript/react.json"
+      },
+      {
+        "language": [
           "typescriptreact"
         ],
         "path": "./javascript/typescript.json"
